--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.DgI4g3pG.js",
+    "file": "_app/immutable/entry/app.C7EtQHkm.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -21,7 +21,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.CrsdLC2T.js",
+    "file": "_app/immutable/nodes/0.BT_PkqdF.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -34,14 +34,14 @@
       "_BOxDSPY6.js",
       "_BD7MZ89G.js",
       "_B_yeyZDL.js",
-      "_DdaIsR-H.js"
+      "_CPvjtsE9.js"
     ],
     "css": [
       "_app/immutable/assets/0.DuW6oD7x.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.-IqLM7Pw.js",
+    "file": "_app/immutable/nodes/1.1WxuzlKH.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -50,7 +50,7 @@
       "_CSMTX6pb.js",
       "_D43ao2JA.js",
       "_D6D-lzwe.js",
-      "_Dct3ZqFx.js"
+      "_CwfNmMKf.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -89,7 +89,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.CmcUE_1Y.js",
+    "file": "_app/immutable/nodes/4.Csw9Tqa9.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
@@ -101,14 +101,15 @@
       "_Db2X8iEw.js",
       "_BD7MZ89G.js",
       "_B_yeyZDL.js",
-      "_Dr4MgrxQ.js"
+      "_Dr4MgrxQ.js",
+      "_CdEA5IGF.js"
     ],
     "css": [
       "_app/immutable/assets/4.DiE6mp9V.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
-    "file": "_app/immutable/nodes/5.DkHtsmki.js",
+    "file": "_app/immutable/nodes/5.BaZczT4B.js",
     "name": "nodes/5",
     "src": ".svelte-kit/generated/client-optimized/nodes/5.js",
     "isEntry": true,
@@ -124,15 +125,17 @@
       "_Dr4MgrxQ.js",
       "_BrFe7kwN.js",
       "_BD7MZ89G.js",
+      "_CdEA5IGF.js",
       "_C-Gqmohk.js",
-      "_DdaIsR-H.js"
+      "_CPvjtsE9.js",
+      "_CwfNmMKf.js"
     ],
     "css": [
-      "_app/immutable/assets/5.BI0xsAFr.css"
+      "_app/immutable/assets/5.AiTseZFV.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/6.js": {
-    "file": "_app/immutable/nodes/6.DmtXUvXi.js",
+    "file": "_app/immutable/nodes/6.ofnTssfL.js",
     "name": "nodes/6",
     "src": ".svelte-kit/generated/client-optimized/nodes/6.js",
     "isEntry": true,
@@ -148,7 +151,7 @@
       "_BD7MZ89G.js",
       "_B_yeyZDL.js",
       "_C-Gqmohk.js",
-      "_DdaIsR-H.js"
+      "_CPvjtsE9.js"
     ],
     "css": [
       "_app/immutable/assets/6.B-NPgZm1.css"
@@ -190,11 +193,28 @@
       "_D6D-lzwe.js"
     ]
   },
+  "_CPvjtsE9.js": {
+    "file": "_app/immutable/chunks/CPvjtsE9.js",
+    "name": "client"
+  },
   "_CSMTX6pb.js": {
     "file": "_app/immutable/chunks/CSMTX6pb.js",
     "name": "disclose-version",
     "imports": [
       "_D6D-lzwe.js"
+    ]
+  },
+  "_CdEA5IGF.js": {
+    "file": "_app/immutable/chunks/CdEA5IGF.js",
+    "name": "event-modifiers"
+  },
+  "_CwfNmMKf.js": {
+    "file": "_app/immutable/chunks/CwfNmMKf.js",
+    "name": "entry",
+    "imports": [
+      "_D6D-lzwe.js",
+      "_BUApaBEI.js",
+      "_CPvjtsE9.js"
     ]
   },
   "_D43ao2JA.js": {
@@ -215,19 +235,6 @@
       "_D6D-lzwe.js"
     ]
   },
-  "_Dct3ZqFx.js": {
-    "file": "_app/immutable/chunks/Dct3ZqFx.js",
-    "name": "entry",
-    "imports": [
-      "_D6D-lzwe.js",
-      "_BUApaBEI.js",
-      "_DdaIsR-H.js"
-    ]
-  },
-  "_DdaIsR-H.js": {
-    "file": "_app/immutable/chunks/DdaIsR-H.js",
-    "name": "client"
-  },
   "_Dr4MgrxQ.js": {
     "file": "_app/immutable/chunks/Dr4MgrxQ.js",
     "name": "props",
@@ -244,12 +251,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.CPLVidUS.js",
+    "file": "_app/immutable/entry/start.BAKGTjhZ.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_Dct3ZqFx.js"
+      "_CwfNmMKf.js"
     ]
   }
 }
