--- a/.svelte-kit/output/server/.vite/manifest.json
+++ b/.svelte-kit/output/server/.vite/manifest.json
@@ -14,7 +14,7 @@
     "file": "chunks/auth.js",
     "name": "auth",
     "imports": [
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "_backupService.js": {
@@ -35,28 +35,34 @@
   },
   "_exports.js": {
     "file": "chunks/exports.js",
-    "name": "exports",
-    "imports": [
-      "_equality.js"
-    ]
+    "name": "exports"
   },
   "_index.js": {
     "file": "chunks/index.js",
     "name": "index",
     "imports": [
-      "_context.js"
+      "_utils2.js",
+      "_equality.js"
     ]
   },
   "_index2.js": {
     "file": "chunks/index2.js",
+    "name": "index",
+    "imports": [
+      "_context.js"
+    ]
+  },
+  "_index3.js": {
+    "file": "chunks/index3.js",
     "name": "index"
   },
   "_internal.js": {
     "file": "chunks/internal.js",
     "name": "internal",
     "imports": [
-      "_index.js",
+      "_index2.js",
       "_environment.js",
+      "_utils2.js",
       "_equality.js",
       "_context.js",
       "_server.js"
@@ -69,7 +75,7 @@
     "file": "chunks/navigationService.js",
     "name": "navigationService",
     "imports": [
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "_productService.js": {
@@ -77,7 +83,7 @@
     "name": "productService",
     "imports": [
       "_products.js",
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "_products.js": {
@@ -95,11 +101,18 @@
       "_utils.js"
     ]
   },
+  "_state.svelte.js": {
+    "file": "chunks/state.svelte.js",
+    "name": "state.svelte",
+    "imports": [
+      "_utils2.js"
+    ]
+  },
   "_teamService.js": {
     "file": "chunks/teamService.js",
     "name": "teamService",
     "imports": [
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "_utils.js": {
@@ -108,6 +121,10 @@
   },
   "_utils2.js": {
     "file": "chunks/utils2.js",
+    "name": "utils"
+  },
+  "_utils3.js": {
+    "file": "chunks/utils3.js",
     "name": "utils"
   },
   "node_modules/@sveltejs/kit/src/runtime/app/server/remote/index.js": {
@@ -128,9 +145,10 @@
     "isEntry": true,
     "imports": [
       "_context.js",
-      "_equality.js",
+      "_state.svelte.js",
       "_exports.js",
-      "_utils.js"
+      "_utils.js",
+      "_index.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/server/index.js": {
@@ -144,6 +162,7 @@
       "_shared.js",
       "_exports.js",
       "_utils.js",
+      "_index.js",
       "_internal.js"
     ]
   },
@@ -159,9 +178,9 @@
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index.js",
-      "_server.js",
       "_index2.js",
+      "_server.js",
+      "_index3.js",
       "_context.js"
     ],
     "css": [
@@ -180,8 +199,8 @@
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index.js",
       "_index2.js",
+      "_index3.js",
       "_context.js"
     ],
     "css": [
@@ -200,8 +219,8 @@
     "src": "src/routes/about/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index.js",
       "_index2.js",
+      "_index3.js",
       "_context.js"
     ],
     "css": [
@@ -215,7 +234,7 @@
     "isEntry": true,
     "imports": [
       "_auth.js",
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "src/routes/api/v1/backups/+server.ts": {
@@ -225,7 +244,7 @@
     "isEntry": true,
     "imports": [
       "_auth.js",
-      "_utils2.js",
+      "_utils3.js",
       "_backupService.js",
       "_productService.js",
       "_teamService.js",
@@ -239,7 +258,7 @@
     "isEntry": true,
     "imports": [
       "_auth.js",
-      "_utils2.js",
+      "_utils3.js",
       "_backupService.js"
     ]
   },
@@ -250,7 +269,7 @@
     "isEntry": true,
     "imports": [
       "_auth.js",
-      "_utils2.js",
+      "_utils3.js",
       "_backupService.js",
       "_productService.js",
       "_teamService.js",
@@ -264,7 +283,7 @@
     "isEntry": true,
     "imports": [
       "_navigationService.js",
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "src/routes/api/v1/navigation/[id]/+server.ts": {
@@ -275,7 +294,7 @@
     "imports": [
       "_navigationService.js",
       "_auth.js",
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "src/routes/api/v1/navigation/[id]/delete/+server.ts": {
@@ -286,7 +305,7 @@
     "imports": [
       "_navigationService.js",
       "_auth.js",
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "src/routes/api/v1/products/+server.ts": {
@@ -297,7 +316,7 @@
     "imports": [
       "_productService.js",
       "_auth.js",
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "src/routes/api/v1/products/[id]/+server.ts": {
@@ -308,7 +327,7 @@
     "imports": [
       "_productService.js",
       "_auth.js",
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "src/routes/api/v1/products/[id]/delete/+server.ts": {
@@ -319,7 +338,7 @@
     "imports": [
       "_productService.js",
       "_auth.js",
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "src/routes/api/v1/team-members/+server.ts": {
@@ -330,7 +349,7 @@
     "imports": [
       "_teamService.js",
       "_auth.js",
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "src/routes/api/v1/team-members/[id]/+server.ts": {
@@ -341,7 +360,7 @@
     "imports": [
       "_teamService.js",
       "_auth.js",
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "src/routes/api/v1/team-members/[id]/delete/+server.ts": {
@@ -352,7 +371,7 @@
     "imports": [
       "_teamService.js",
       "_auth.js",
-      "_utils2.js"
+      "_utils3.js"
     ]
   },
   "src/routes/contact/+page.server.ts": {
@@ -367,8 +386,8 @@
     "src": "src/routes/contact/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index.js",
       "_index2.js",
+      "_index3.js",
       "_context.js"
     ],
     "css": [
@@ -387,13 +406,16 @@
     "src": "src/routes/products/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index.js",
-      "_server.js",
       "_index2.js",
+      "_server.js",
+      "_exports.js",
+      "_utils.js",
+      "_state.svelte.js",
+      "_index3.js",
       "_context.js"
     ],
     "css": [
-      "_app/immutable/assets/_page.BOP3gT1y.css"
+      "_app/immutable/assets/_page.DWQFjreq.css"
     ]
   },
   "src/routes/products/[id]/+page.svelte": {
@@ -402,9 +424,9 @@
     "src": "src/routes/products/[id]/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index.js",
-      "_server.js",
       "_index2.js",
+      "_server.js",
+      "_index3.js",
       "_context.js"
     ],
     "css": [
