--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.WKYdEEuG.js",
+    "file": "_app/immutable/entry/app.B5cVCGUL.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -21,7 +21,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.DAJDHuAD.js",
+    "file": "_app/immutable/nodes/0.DmJbOGsn.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -34,14 +34,14 @@
       "_BOxDSPY6.js",
       "_BD7MZ89G.js",
       "_B_yeyZDL.js",
-      "_C1zx0bsJ.js"
+      "_CVXhwYVV.js"
     ],
     "css": [
       "_app/immutable/assets/0.WarG_uBX.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.DQxNAHqd.js",
+    "file": "_app/immutable/nodes/1.0_pdoy0w.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -50,7 +50,7 @@
       "_CSMTX6pb.js",
       "_D43ao2JA.js",
       "_D6D-lzwe.js",
-      "_DeBFoHaE.js"
+      "_BkQUe5tw.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -109,7 +109,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
-    "file": "_app/immutable/nodes/5.BGPhSWgn.js",
+    "file": "_app/immutable/nodes/5.C7XH1TQv.js",
     "name": "nodes/5",
     "src": ".svelte-kit/generated/client-optimized/nodes/5.js",
     "isEntry": true,
@@ -127,15 +127,15 @@
       "_BD7MZ89G.js",
       "_CdEA5IGF.js",
       "_C-Gqmohk.js",
-      "_C1zx0bsJ.js",
-      "_DeBFoHaE.js"
+      "_CVXhwYVV.js",
+      "_BkQUe5tw.js"
     ],
     "css": [
       "_app/immutable/assets/5.AiTseZFV.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/6.js": {
-    "file": "_app/immutable/nodes/6.CCxj6TH-.js",
+    "file": "_app/immutable/nodes/6.BqVEjnwo.js",
     "name": "nodes/6",
     "src": ".svelte-kit/generated/client-optimized/nodes/6.js",
     "isEntry": true,
@@ -151,7 +151,7 @@
       "_BD7MZ89G.js",
       "_B_yeyZDL.js",
       "_C-Gqmohk.js",
-      "_C1zx0bsJ.js"
+      "_CVXhwYVV.js"
     ],
     "css": [
       "_app/immutable/assets/6.B-NPgZm1.css"
@@ -182,6 +182,15 @@
       "_D6D-lzwe.js"
     ]
   },
+  "_BkQUe5tw.js": {
+    "file": "_app/immutable/chunks/BkQUe5tw.js",
+    "name": "entry",
+    "imports": [
+      "_D6D-lzwe.js",
+      "_BUApaBEI.js",
+      "_CVXhwYVV.js"
+    ]
+  },
   "_BrFe7kwN.js": {
     "file": "_app/immutable/chunks/BrFe7kwN.js",
     "name": "products"
@@ -193,16 +202,16 @@
       "_D6D-lzwe.js"
     ]
   },
-  "_C1zx0bsJ.js": {
-    "file": "_app/immutable/chunks/C1zx0bsJ.js",
-    "name": "client"
-  },
   "_CSMTX6pb.js": {
     "file": "_app/immutable/chunks/CSMTX6pb.js",
     "name": "disclose-version",
     "imports": [
       "_D6D-lzwe.js"
     ]
+  },
+  "_CVXhwYVV.js": {
+    "file": "_app/immutable/chunks/CVXhwYVV.js",
+    "name": "client"
   },
   "_CdEA5IGF.js": {
     "file": "_app/immutable/chunks/CdEA5IGF.js",
@@ -226,15 +235,6 @@
       "_D6D-lzwe.js"
     ]
   },
-  "_DeBFoHaE.js": {
-    "file": "_app/immutable/chunks/DeBFoHaE.js",
-    "name": "entry",
-    "imports": [
-      "_D6D-lzwe.js",
-      "_BUApaBEI.js",
-      "_C1zx0bsJ.js"
-    ]
-  },
   "_Dr4MgrxQ.js": {
     "file": "_app/immutable/chunks/Dr4MgrxQ.js",
     "name": "props",
@@ -251,12 +251,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.B9WNs0Dv.js",
+    "file": "_app/immutable/entry/start.BMlPwH7j.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_DeBFoHaE.js"
+      "_BkQUe5tw.js"
     ]
   }
 }
