--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.B5cVCGUL.js",
+    "file": "_app/immutable/entry/app.B8s-hL6O.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -21,7 +21,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.DmJbOGsn.js",
+    "file": "_app/immutable/nodes/0.C2QNP-ck.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -34,14 +34,14 @@
       "_BOxDSPY6.js",
       "_BD7MZ89G.js",
       "_B_yeyZDL.js",
-      "_CVXhwYVV.js"
+      "_BmV21wvS.js"
     ],
     "css": [
       "_app/immutable/assets/0.WarG_uBX.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.0_pdoy0w.js",
+    "file": "_app/immutable/nodes/1.yLqqzodV.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -50,7 +50,7 @@
       "_CSMTX6pb.js",
       "_D43ao2JA.js",
       "_D6D-lzwe.js",
-      "_BkQUe5tw.js"
+      "_CpL-Y-YH.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -89,7 +89,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.Csw9Tqa9.js",
+    "file": "_app/immutable/nodes/4.CmcUE_1Y.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
@@ -101,15 +101,14 @@
       "_Db2X8iEw.js",
       "_BD7MZ89G.js",
       "_B_yeyZDL.js",
-      "_Dr4MgrxQ.js",
-      "_CdEA5IGF.js"
+      "_Dr4MgrxQ.js"
     ],
     "css": [
       "_app/immutable/assets/4.DiE6mp9V.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
-    "file": "_app/immutable/nodes/5.C7XH1TQv.js",
+    "file": "_app/immutable/nodes/5.CfTtTYJM.js",
     "name": "nodes/5",
     "src": ".svelte-kit/generated/client-optimized/nodes/5.js",
     "isEntry": true,
@@ -125,17 +124,15 @@
       "_Dr4MgrxQ.js",
       "_BrFe7kwN.js",
       "_BD7MZ89G.js",
-      "_CdEA5IGF.js",
       "_C-Gqmohk.js",
-      "_CVXhwYVV.js",
-      "_BkQUe5tw.js"
+      "_BmV21wvS.js"
     ],
     "css": [
       "_app/immutable/assets/5.AiTseZFV.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/6.js": {
-    "file": "_app/immutable/nodes/6.BqVEjnwo.js",
+    "file": "_app/immutable/nodes/6.Cyb9l-B9.js",
     "name": "nodes/6",
     "src": ".svelte-kit/generated/client-optimized/nodes/6.js",
     "isEntry": true,
@@ -151,7 +148,7 @@
       "_BD7MZ89G.js",
       "_B_yeyZDL.js",
       "_C-Gqmohk.js",
-      "_CVXhwYVV.js"
+      "_BmV21wvS.js"
     ],
     "css": [
       "_app/immutable/assets/6.B-NPgZm1.css"
@@ -182,14 +179,9 @@
       "_D6D-lzwe.js"
     ]
   },
-  "_BkQUe5tw.js": {
-    "file": "_app/immutable/chunks/BkQUe5tw.js",
-    "name": "entry",
-    "imports": [
-      "_D6D-lzwe.js",
-      "_BUApaBEI.js",
-      "_CVXhwYVV.js"
-    ]
+  "_BmV21wvS.js": {
+    "file": "_app/immutable/chunks/BmV21wvS.js",
+    "name": "client"
   },
   "_BrFe7kwN.js": {
     "file": "_app/immutable/chunks/BrFe7kwN.js",
@@ -209,13 +201,14 @@
       "_D6D-lzwe.js"
     ]
   },
-  "_CVXhwYVV.js": {
-    "file": "_app/immutable/chunks/CVXhwYVV.js",
-    "name": "client"
-  },
-  "_CdEA5IGF.js": {
-    "file": "_app/immutable/chunks/CdEA5IGF.js",
-    "name": "event-modifiers"
+  "_CpL-Y-YH.js": {
+    "file": "_app/immutable/chunks/CpL-Y-YH.js",
+    "name": "entry",
+    "imports": [
+      "_D6D-lzwe.js",
+      "_BUApaBEI.js",
+      "_BmV21wvS.js"
+    ]
   },
   "_D43ao2JA.js": {
     "file": "_app/immutable/chunks/D43ao2JA.js",
@@ -251,12 +244,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.BMlPwH7j.js",
+    "file": "_app/immutable/entry/start.BVo94YyE.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_BkQUe5tw.js"
+      "_CpL-Y-YH.js"
     ]
   }
 }
