--- a/.svelte-kit/output/server/.vite/manifest.json
+++ b/.svelte-kit/output/server/.vite/manifest.json
@@ -14,7 +14,7 @@
     "file": "chunks/auth.js",
     "name": "auth",
     "imports": [
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "_backupService.js": {
@@ -35,34 +35,28 @@
   },
   "_exports.js": {
     "file": "chunks/exports.js",
-    "name": "exports"
+    "name": "exports",
+    "imports": [
+      "_equality.js"
+    ]
   },
   "_index.js": {
     "file": "chunks/index.js",
     "name": "index",
     "imports": [
-      "_utils2.js",
-      "_equality.js"
+      "_context.js"
     ]
   },
   "_index2.js": {
     "file": "chunks/index2.js",
-    "name": "index",
-    "imports": [
-      "_context.js"
-    ]
-  },
-  "_index3.js": {
-    "file": "chunks/index3.js",
     "name": "index"
   },
   "_internal.js": {
     "file": "chunks/internal.js",
     "name": "internal",
     "imports": [
-      "_index2.js",
+      "_index.js",
       "_environment.js",
-      "_utils2.js",
       "_equality.js",
       "_context.js",
       "_server.js"
@@ -75,7 +69,7 @@
     "file": "chunks/navigationService.js",
     "name": "navigationService",
     "imports": [
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "_productService.js": {
@@ -83,7 +77,7 @@
     "name": "productService",
     "imports": [
       "_products.js",
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "_products.js": {
@@ -101,18 +95,11 @@
       "_utils.js"
     ]
   },
-  "_state.svelte.js": {
-    "file": "chunks/state.svelte.js",
-    "name": "state.svelte",
-    "imports": [
-      "_utils2.js"
-    ]
-  },
   "_teamService.js": {
     "file": "chunks/teamService.js",
     "name": "teamService",
     "imports": [
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "_utils.js": {
@@ -121,10 +108,6 @@
   },
   "_utils2.js": {
     "file": "chunks/utils2.js",
-    "name": "utils"
-  },
-  "_utils3.js": {
-    "file": "chunks/utils3.js",
     "name": "utils"
   },
   "node_modules/@sveltejs/kit/src/runtime/app/server/remote/index.js": {
@@ -145,10 +128,9 @@
     "isEntry": true,
     "imports": [
       "_context.js",
-      "_state.svelte.js",
+      "_equality.js",
       "_exports.js",
-      "_utils.js",
-      "_index.js"
+      "_utils.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/server/index.js": {
@@ -162,7 +144,6 @@
       "_shared.js",
       "_exports.js",
       "_utils.js",
-      "_index.js",
       "_internal.js"
     ]
   },
@@ -178,9 +159,9 @@
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index2.js",
+      "_index.js",
       "_server.js",
-      "_index3.js",
+      "_index2.js",
       "_context.js"
     ],
     "css": [
@@ -199,8 +180,8 @@
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
+      "_index.js",
       "_index2.js",
-      "_index3.js",
       "_context.js"
     ],
     "css": [
@@ -219,8 +200,8 @@
     "src": "src/routes/about/+page.svelte",
     "isEntry": true,
     "imports": [
+      "_index.js",
       "_index2.js",
-      "_index3.js",
       "_context.js"
     ],
     "css": [
@@ -234,7 +215,7 @@
     "isEntry": true,
     "imports": [
       "_auth.js",
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "src/routes/api/v1/backups/+server.ts": {
@@ -244,7 +225,7 @@
     "isEntry": true,
     "imports": [
       "_auth.js",
-      "_utils3.js",
+      "_utils2.js",
       "_backupService.js",
       "_productService.js",
       "_teamService.js",
@@ -258,7 +239,7 @@
     "isEntry": true,
     "imports": [
       "_auth.js",
-      "_utils3.js",
+      "_utils2.js",
       "_backupService.js"
     ]
   },
@@ -269,7 +250,7 @@
     "isEntry": true,
     "imports": [
       "_auth.js",
-      "_utils3.js",
+      "_utils2.js",
       "_backupService.js",
       "_productService.js",
       "_teamService.js",
@@ -283,7 +264,7 @@
     "isEntry": true,
     "imports": [
       "_navigationService.js",
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "src/routes/api/v1/navigation/[id]/+server.ts": {
@@ -294,7 +275,7 @@
     "imports": [
       "_navigationService.js",
       "_auth.js",
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "src/routes/api/v1/navigation/[id]/delete/+server.ts": {
@@ -305,7 +286,7 @@
     "imports": [
       "_navigationService.js",
       "_auth.js",
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "src/routes/api/v1/products/+server.ts": {
@@ -316,7 +297,7 @@
     "imports": [
       "_productService.js",
       "_auth.js",
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "src/routes/api/v1/products/[id]/+server.ts": {
@@ -327,7 +308,7 @@
     "imports": [
       "_productService.js",
       "_auth.js",
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "src/routes/api/v1/products/[id]/delete/+server.ts": {
@@ -338,7 +319,7 @@
     "imports": [
       "_productService.js",
       "_auth.js",
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "src/routes/api/v1/team-members/+server.ts": {
@@ -349,7 +330,7 @@
     "imports": [
       "_teamService.js",
       "_auth.js",
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "src/routes/api/v1/team-members/[id]/+server.ts": {
@@ -360,7 +341,7 @@
     "imports": [
       "_teamService.js",
       "_auth.js",
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "src/routes/api/v1/team-members/[id]/delete/+server.ts": {
@@ -371,7 +352,7 @@
     "imports": [
       "_teamService.js",
       "_auth.js",
-      "_utils3.js"
+      "_utils2.js"
     ]
   },
   "src/routes/contact/+page.server.ts": {
@@ -386,8 +367,8 @@
     "src": "src/routes/contact/+page.svelte",
     "isEntry": true,
     "imports": [
+      "_index.js",
       "_index2.js",
-      "_index3.js",
       "_context.js"
     ],
     "css": [
@@ -406,12 +387,9 @@
     "src": "src/routes/products/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index2.js",
+      "_index.js",
       "_server.js",
-      "_exports.js",
-      "_utils.js",
-      "_state.svelte.js",
-      "_index3.js",
+      "_index2.js",
       "_context.js"
     ],
     "css": [
@@ -424,9 +402,9 @@
     "src": "src/routes/products/[id]/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index2.js",
+      "_index.js",
       "_server.js",
-      "_index3.js",
+      "_index2.js",
       "_context.js"
     ],
     "css": [
